# ftmlabdaq

./: .gitignore  README.md  efficiency.py  efficiency_measurement.yaml  env.sh  ftm.py  measurement.py  pyproject.toml
commands/analysis/: efficiency.py  threshold.py
commands/scans/: configure.py  efficiency.py  efficiency_laser.py  threshold.py
ftm/: app.py
ftm/commands/: legacy.py
ftm/commands/analysis/: currents.py  efficiency.py  efficiency_laser.py  threshold.py
ftm/commands/scans/: configure.py  efficiency_laser.py  efficiency_voltage.py  threshold.py
ftm/modules/: attenuator.py  hv.py  scope.py
measurements/: efficiency.yaml
modules/: attenuator.py  hv.py  scope.py
protocols/: serial.py
settings/: efficiency.yaml  threshold_scan.yaml
tests/scope-lecroy/: acquire.py
